--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--STYLE-->
     <link rel="stylesheet" href="./css/style.css">
+    <!--FONT-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Shoes</title>
 </head>
 <body>
-    
+    <section class="section">
+       <div class="shoes">
+           <img src="./img/01 copia.png" alt="first shoes">
+           <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+       </div> 
+    </section>
+
+    <section class="section">
+        <div class="shoes">
+            <img src="./img/02 copia.png" alt="second shoes">
+            <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+        </div> 
+     </section>
+
+     <section class="section">
+        <div class="shoes">
+            <img src="./img/03 copia.png" alt="third shoes">
+            <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+        </div> 
+     </section>
+
+
 </body>
 </html>
