--- a/index.html
+++ b/index.html
@@ -12,27 +12,44 @@
     <title>Shoes</title>
 </head>
 <body>
-    <section class="section">
+  <nav class="navigation">
+        <ul>
+            <li>
+                <a href="#first">1</a>
+            </li>
+            <li>
+                <a href="#second">2</a>
+            </li>
+            <li>
+                <a href="#third">3</a>
+            </li>
+        </ul>
+  </nav>
+
+  <main>
+    <section id="first" class="section">
        <div class="shoes">
            <img src="./img/01 copia.png" alt="first shoes">
            <h1>IL NOSTRO MODELLO DI PUNTA</h1>
        </div> 
     </section>
 
-    <section class="section">
+    <section id="second" class="section">
         <div class="shoes">
             <img src="./img/02 copia.png" alt="second shoes">
             <h1>IL NOSTRO MODELLO DI PUNTA</h1>
         </div> 
      </section>
 
-     <section class="section">
+     <section id="third" class="section">
         <div class="shoes">
             <img src="./img/03 copia.png" alt="third shoes">
             <h1>IL NOSTRO MODELLO DI PUNTA</h1>
         </div> 
      </section>
+  </main>
 
+   
 
 </body>
 </html>
